# CinLib

./: Cargo.toml  README.md
cinlib-app/: Cargo.toml
cinlib-app/assets/styles/: base.css
cinlib-app/migrations/: 0001_initial.sql
cinlib-app/src/: main.rs
cinlib-app/src/app/: grid.rs  mod.rs  state.rs
cinlib-app/src/domain/: error.rs  library.rs  media.rs  metadata.rs  mod.rs
cinlib-app/src/infra/: app_dirs.rs  cache.rs  db.rs  http.rs  mod.rs  watcher.rs
cinlib-app/src/services/: library.rs  metadata.rs  playback.rs  scanner.rs
